kubernetes/managed-by-astra/v1/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureManagedByAstra
metadata:
  name: managed-by-astra
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
