kubernetes/managed-by-astra/v1/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sazuremanagedbyastra
spec:
  crd:
    spec:
      names:
        kind: K8sAzureManagedByAstra
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sazuremanagedbyastra

        violation[{"msg": msg}] {
          msg := sprintf("REVIEW OBJECT: %v", [input.review])
        }
